--- a/index.html
+++ b/index.html
@@ -66,29 +66,78 @@
     <header id="header">
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="assets/img/slider1.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="assets/img/slider2.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="assets/img/slider3.jpg" class="d-block w-100" alt="...">
-              </div>
+                <div class="carousel-item active">
+                    <img src="assets/img/slider1.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/img/slider2.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/img/slider3.jpg" class="d-block w-100" alt="...">
+                </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
             </button>
-          </div>
+        </div>
     </header>
     <!-- Header Section End -->
 
-    
+    <!-- Categories Section Start -->
+    <section id="categories" class="my-5 py-5">
+        <section class="container">
+            <div class="title text-center">
+                <h1 class="h1">Categories</h1>
+            </div>
+            <div class="row py-md-5">
+                <div class="col-md-3">
+                    <div class="card text-center">
+                        <img src="assets/img/about.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title mb-3">Government Jobs</h5>
+                            <a href="#" class="btn btn-outline-success">Apply Now</a>
+                        </div>
+                    </div>
+                </div><!-- Single Card End -->
+                <div class="col-md-3">
+                    <div class="card text-center">
+                        <img src="assets/img/about.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title mb-3">Government Jobs</h5>
+                            <a href="#" class="btn btn-outline-success">Apply Now</a>
+                        </div>
+                    </div>
+                </div><!-- Single Card End -->
+                <div class="col-md-3">
+                    <div class="card text-center">
+                        <img src="assets/img/about.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title mb-3">Government Jobs</h5>
+                            <a href="#" class="btn btn-outline-success">Apply Now</a>
+                        </div>
+                    </div>
+                </div><!-- Single Card End -->
+                <div class="col-md-3">
+                    <div class="card text-center">
+                        <img src="assets/img/about.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title mb-3">Government Jobs</h5>
+                            <a href="#" class="btn btn-outline-success">Apply Now</a>
+                        </div>
+                    </div>
+                </div><!-- Single Card End -->
+            </div>
+        </section>
+    </section>
+    <!-- Categories Section End -->
+
 
     <!-- Bootstrap JS CDN -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
