--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <!-- Navbar Section Start -->
-    <nav id="navbar" class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
+    <nav id="navbar" class="navbar navbar-expand-lg sticky-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">
                 <img src="assets/img/logo.png" alt="" class="d-block w-100">
