Popular Section Started

--- a/index.html
+++ b/index.html
@@ -138,6 +138,17 @@
     </section>
     <!-- Categories Section End -->
 
+    <!-- Popular Jobs Section Start -->
+    <section id="categories" class="my-5 py-5">
+        <section class="container">
+            <div class="title text-center">
+                <h1 class="h1">Categories</h1>
+            </div>
+            <div class="row py-md-5"></div>
+        </section>
+    </section>
+    <!-- Popular Jobs Section End -->
+
 
     <!-- Bootstrap JS CDN -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
