--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <div class="card text-center">
                         <img src="assets/img/about.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title mb-3">Government Jobs</h5>
+                            <h5 class="card-title mb-3">Private Jobs</h5>
                             <a href="#" class="btn btn-outline-success">Apply Now</a>
                         </div>
                     </div>
@@ -119,7 +119,7 @@
                     <div class="card text-center">
                         <img src="assets/img/about.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title mb-3">Government Jobs</h5>
+                            <h5 class="card-title mb-3">Contratcual Jobs</h5>
                             <a href="#" class="btn btn-outline-success">Apply Now</a>
                         </div>
                     </div>
@@ -128,7 +128,7 @@
                     <div class="card text-center">
                         <img src="assets/img/about.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title mb-3">Government Jobs</h5>
+                            <h5 class="card-title mb-3">Freelance Jobs</h5>
                             <a href="#" class="btn btn-outline-success">Apply Now</a>
                         </div>
                     </div>
