--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
     <!-- Header Section End -->
 
     <!-- Categories Section Start -->
-    <section id="categories" class="my-5 py-5">
+    <section id="categories" class="my-5">
         <section class="container">
-            <div class="title text-center">
+            <div class="title text-center mb-5">
                 <h1 class="h1">Categories</h1>
             </div>
-            <div class="row py-md-5">
+            <div class="row">
                 <div class="col-md-3">
                     <div class="card text-center">
                         <img src="assets/img/about.jpg" class="card-img-top" alt="...">
@@ -139,12 +139,14 @@
     <!-- Categories Section End -->
 
     <!-- Popular Jobs Section Start -->
-    <section id="categories" class="my-5 py-5">
+    <section id="categories" class="my-5">
         <section class="container">
-            <div class="title text-center">
+            <div class="title text-center mb-5">
                 <h1 class="h1">Categories</h1>
             </div>
-            <div class="row py-md-5"></div>
+            <div class="row">
+                
+            </div>
         </section>
     </section>
     <!-- Popular Jobs Section End -->
