btn color fixed

--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@
     <section id="categories" class="my-5">
         <section class="container">
             <div class="title text-center mb-5">
-                <h1 class="h1">Categories</h1>
+                <h1 class="h1">Popular Jobs</h1>
+                <h6>Find Popular Jobs Here</h6>
             </div>
             <div class="row">
                 
