popular section completed

--- a/index.html
+++ b/index.html
@@ -139,14 +139,157 @@
     <!-- Categories Section End -->
 
     <!-- Popular Jobs Section Start -->
-    <section id="categories" class="my-5">
-        <section class="container">
+    <section id="popular" class="my-5 bg-body-tertiary">
+        <section class="container py-5">
             <div class="title text-center mb-5">
                 <h1 class="h1">Popular Jobs</h1>
                 <h6>Find Popular Jobs Here</h6>
             </div>
             <div class="row">
-                
+                <div class="col-md-6 col-lg-3">
+                    <div class="card mb-3 px-2">
+                        <div class="row align-items-center g-0">
+                            <div class="col-sm-4">
+                                <img src="assets/img/actionaidlogo300.png" class="img-fluid rounded-start" alt="..." >
+                            </div>
+                            <div class="col-sm-8">
+                                <div class="card-body ms-sm-2">
+                                    <h6 class="card-title">ActionAid</h6>
+                                    <p class="card-text fs-6">
+                                        HR Manager <br>
+                                        Production Manager
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div><!--Single Card End-->
+                <div class="col-md-6 col-lg-3">
+                    <div class="card mb-3">
+                        <div class="row align-items-center g-0">
+                            <div class="col-sm-4 px-2">
+                                <img src="assets/img/aristopharma300.png" class="img-fluid rounded-start" alt="..." >
+                            </div>
+                            <div class="col-sm-8">
+                                <div class="card-body ms-sm-2">
+                                    <h6 class="card-title">Aristo Pharma</h6>
+                                    <p class="card-text fs-6">
+                                        HR Manager <br>
+                                        Production Manager
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div><!--Single Card End-->
+                <div class="col-md-6 col-lg-3">
+                    <div class="card mb-3">
+                        <div class="row align-items-center g-0">
+                            <div class="col-sm-4 px-2">
+                                <img src="assets/img/asset150.png" class="img-fluid rounded-start" alt="..." >
+                            </div>
+                            <div class="col-sm-8">
+                                <div class="card-body ms-sm-2">
+                                    <h6 class="card-title">Asset</h6>
+                                    <p class="card-text fs-6">
+                                        HR Manager <br>
+                                        Production Manager
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div><!--Single Card End-->
+                <div class="col-md-6 col-lg-3">
+                    <div class="card mb-3">
+                        <div class="row align-items-center g-0">
+                            <div class="col-sm-4 px-2">
+                                <img src="assets/img/buistcumilla300.png" class="img-fluid rounded-start" alt="..." >
+                            </div>
+                            <div class="col-sm-8">
+                                <div class="card-body ms-sm-2">
+                                    <h6 class="card-title">BAIUST</h6>
+                                    <p class="card-text fs-6">
+                                        HR Manager <br>
+                                        Production Manager
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div><!--Single Card End-->
+                <div class="col-md-6 col-lg-3">
+                    <div class="card mb-3">
+                        <div class="row align-items-center g-0">
+                            <div class="col-sm-4 px-2">
+                                <img src="assets/img/asset150.png" class="img-fluid rounded-start" alt="..." >
+                            </div>
+                            <div class="col-sm-8">
+                                <div class="card-body ms-sm-2">
+                                    <h6 class="card-title">Asset</h6>
+                                    <p class="card-text fs-6">
+                                        HR Manager <br>
+                                        Production Manager
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div><!--Single Card End-->
+                <div class="col-md-6 col-lg-3">
+                    <div class="card mb-3 px-2">
+                        <div class="row align-items-center g-0">
+                            <div class="col-sm-4">
+                                <img src="assets/img/actionaidlogo300.png" class="img-fluid rounded-start" alt="..." >
+                            </div>
+                            <div class="col-sm-8">
+                                <div class="card-body ms-sm-2">
+                                    <h6 class="card-title">ActionAid</h6>
+                                    <p class="card-text fs-6">
+                                        HR Manager <br>
+                                        Production Manager
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div><!--Single Card End-->
+                <div class="col-md-6 col-lg-3">
+                    <div class="card mb-3">
+                        <div class="row align-items-center g-0">
+                            <div class="col-sm-4 px-2">
+                                <img src="assets/img/buistcumilla300.png" class="img-fluid rounded-start" alt="..." >
+                            </div>
+                            <div class="col-sm-8">
+                                <div class="card-body ms-sm-2">
+                                    <h6 class="card-title">BAIUST</h6>
+                                    <p class="card-text fs-6">
+                                        HR Manager <br>
+                                        Production Manager
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div><!--Single Card End-->
+                <div class="col-md-6 col-lg-3">`
+                    <div class="card mb-3">
+                        <div class="row align-items-center g-0">
+                            <div class="col-sm-4 px-2">
+                                <img src="assets/img/aristopharma300.png" class="img-fluid rounded-start" alt="..." >
+                            </div>
+                            <div class="col-sm-8">
+                                <div class="card-body ms-sm-2">
+                                    <h6 class="card-title">Aristo Pharma</h6>
+                                    <p class="card-text fs-6">
+                                        HR Manager <br>
+                                        Production Manager
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div><!--Single Card End-->
             </div>
         </section>
     </section>
