popular section completed

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     <div class="card mb-3 px-2">
                         <div class="row align-items-center g-0">
                             <div class="col-sm-4">
-                                <img src="assets/img/actionaidlogo300.png" class="img-fluid rounded-start" alt="..." >
+                                <img src="assets/img/actionaidlogo300.png" class="img-fluid rounded-start" alt="...">
                             </div>
                             <div class="col-sm-8">
                                 <div class="card-body ms-sm-2">
@@ -168,7 +168,7 @@
                     <div class="card mb-3">
                         <div class="row align-items-center g-0">
                             <div class="col-sm-4 px-2">
-                                <img src="assets/img/aristopharma300.png" class="img-fluid rounded-start" alt="..." >
+                                <img src="assets/img/aristopharma300.png" class="img-fluid rounded-start" alt="...">
                             </div>
                             <div class="col-sm-8">
                                 <div class="card-body ms-sm-2">
@@ -186,7 +186,7 @@
                     <div class="card mb-3">
                         <div class="row align-items-center g-0">
                             <div class="col-sm-4 px-2">
-                                <img src="assets/img/asset150.png" class="img-fluid rounded-start" alt="..." >
+                                <img src="assets/img/asset150.png" class="img-fluid rounded-start" alt="...">
                             </div>
                             <div class="col-sm-8">
                                 <div class="card-body ms-sm-2">
@@ -204,7 +204,7 @@
                     <div class="card mb-3">
                         <div class="row align-items-center g-0">
                             <div class="col-sm-4 px-2">
-                                <img src="assets/img/buistcumilla300.png" class="img-fluid rounded-start" alt="..." >
+                                <img src="assets/img/buistcumilla300.png" class="img-fluid rounded-start" alt="...">
                             </div>
                             <div class="col-sm-8">
                                 <div class="card-body ms-sm-2">
@@ -222,7 +222,7 @@
                     <div class="card mb-3">
                         <div class="row align-items-center g-0">
                             <div class="col-sm-4 px-2">
-                                <img src="assets/img/asset150.png" class="img-fluid rounded-start" alt="..." >
+                                <img src="assets/img/asset150.png" class="img-fluid rounded-start" alt="...">
                             </div>
                             <div class="col-sm-8">
                                 <div class="card-body ms-sm-2">
@@ -240,7 +240,7 @@
                     <div class="card mb-3 px-2">
                         <div class="row align-items-center g-0">
                             <div class="col-sm-4">
-                                <img src="assets/img/actionaidlogo300.png" class="img-fluid rounded-start" alt="..." >
+                                <img src="assets/img/actionaidlogo300.png" class="img-fluid rounded-start" alt="...">
                             </div>
                             <div class="col-sm-8">
                                 <div class="card-body ms-sm-2">
@@ -258,7 +258,7 @@
                     <div class="card mb-3">
                         <div class="row align-items-center g-0">
                             <div class="col-sm-4 px-2">
-                                <img src="assets/img/buistcumilla300.png" class="img-fluid rounded-start" alt="..." >
+                                <img src="assets/img/buistcumilla300.png" class="img-fluid rounded-start" alt="...">
                             </div>
                             <div class="col-sm-8">
                                 <div class="card-body ms-sm-2">
@@ -272,11 +272,11 @@
                         </div>
                     </div>
                 </div><!--Single Card End-->
-                <div class="col-md-6 col-lg-3">`
+                <div class="col-md-6 col-lg-3">
                     <div class="card mb-3">
                         <div class="row align-items-center g-0">
                             <div class="col-sm-4 px-2">
-                                <img src="assets/img/aristopharma300.png" class="img-fluid rounded-start" alt="..." >
+                                <img src="assets/img/aristopharma300.png" class="img-fluid rounded-start" alt="...">
                             </div>
                             <div class="col-sm-8">
                                 <div class="card-body ms-sm-2">
@@ -289,7 +289,7 @@
                             </div>
                         </div>
                     </div>
-                </div><!--Single Card End-->
+                </div><!--Single Card End-->                
             </div>
         </section>
     </section>
