feedback section started

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                     </div>
                 </div><!--Single Card End-->
                 <div class="col-md-6 col-lg-3">
-                    <div class="card mb-3">
+                    <div class="card mb-3 px-2">
                         <div class="row align-items-center g-0">
                             <div class="col-sm-4 px-2">
                                 <img src="assets/img/aristopharma300.png" class="img-fluid rounded-start" alt="...">
@@ -183,43 +183,7 @@
                     </div>
                 </div><!--Single Card End-->
                 <div class="col-md-6 col-lg-3">
-                    <div class="card mb-3">
-                        <div class="row align-items-center g-0">
-                            <div class="col-sm-4 px-2">
-                                <img src="assets/img/asset150.png" class="img-fluid rounded-start" alt="...">
-                            </div>
-                            <div class="col-sm-8">
-                                <div class="card-body ms-sm-2">
-                                    <h6 class="card-title">Asset</h6>
-                                    <p class="card-text fs-6">
-                                        HR Manager <br>
-                                        Production Manager
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div><!--Single Card End-->
-                <div class="col-md-6 col-lg-3">
-                    <div class="card mb-3">
-                        <div class="row align-items-center g-0">
-                            <div class="col-sm-4 px-2">
-                                <img src="assets/img/buistcumilla300.png" class="img-fluid rounded-start" alt="...">
-                            </div>
-                            <div class="col-sm-8">
-                                <div class="card-body ms-sm-2">
-                                    <h6 class="card-title">BAIUST</h6>
-                                    <p class="card-text fs-6">
-                                        HR Manager <br>
-                                        Production Manager
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div><!--Single Card End-->
-                <div class="col-md-6 col-lg-3">
-                    <div class="card mb-3">
+                    <div class="card mb-3 px-2">
                         <div class="row align-items-center g-0">
                             <div class="col-sm-4 px-2">
                                 <img src="assets/img/asset150.png" class="img-fluid rounded-start" alt="...">
@@ -239,6 +203,42 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="card mb-3 px-2">
                         <div class="row align-items-center g-0">
+                            <div class="col-sm-4 px-2">
+                                <img src="assets/img/buistcumilla300.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-sm-8">
+                                <div class="card-body ms-sm-2">
+                                    <h6 class="card-title">BAIUST</h6>
+                                    <p class="card-text fs-6">
+                                        HR Manager <br>
+                                        Production Manager
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div><!--Single Card End-->
+                <div class="col-md-6 col-lg-3">
+                    <div class="card mb-3 px-2">
+                        <div class="row align-items-center g-0">
+                            <div class="col-sm-4 px-2">
+                                <img src="assets/img/asset150.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-sm-8">
+                                <div class="card-body ms-sm-2">
+                                    <h6 class="card-title">Asset</h6>
+                                    <p class="card-text fs-6">
+                                        HR Manager <br>
+                                        Production Manager
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div><!--Single Card End-->
+                <div class="col-md-6 col-lg-3">
+                    <div class="card mb-3 px-2 px-2">
+                        <div class="row align-items-center g-0">
                             <div class="col-sm-4">
                                 <img src="assets/img/actionaidlogo300.png" class="img-fluid rounded-start" alt="...">
                             </div>
@@ -255,7 +255,7 @@
                     </div>
                 </div><!--Single Card End-->
                 <div class="col-md-6 col-lg-3">
-                    <div class="card mb-3">
+                    <div class="card mb-3 px-2">
                         <div class="row align-items-center g-0">
                             <div class="col-sm-4 px-2">
                                 <img src="assets/img/buistcumilla300.png" class="img-fluid rounded-start" alt="...">
@@ -273,7 +273,7 @@
                     </div>
                 </div><!--Single Card End-->
                 <div class="col-md-6 col-lg-3">
-                    <div class="card mb-3">
+                    <div class="card mb-3 px-2">
                         <div class="row align-items-center g-0">
                             <div class="col-sm-4 px-2">
                                 <img src="assets/img/aristopharma300.png" class="img-fluid rounded-start" alt="...">
@@ -289,7 +289,7 @@
                             </div>
                         </div>
                     </div>
-                </div><!--Single Card End-->                
+                </div><!--Single Card End-->
             </div>
         </section>
     </section>
@@ -302,17 +302,60 @@
                 <h1 class="h1">Feedback</h1>
                 <h6>Listen from our customers.</h6>
             </div>
-            <div class="col-6 offset-3">
-                <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
+            <div class="col-md-6 offset-md-3">
+                <div id="carouselExampleRide" class="carousel carousel-dark slide" data-bs-ride="true">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="..." class="d-block w-100" alt="...">
+                            <div class="col-8 offset-2">
+                                <div class="card">
+                                    <img src="assets/img/user1.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Card title</h5>
+                                        <p class="card-text">This is a longer card with supporting text below as a
+                                            natural lead-in to additional content. This content is a little bit longer.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="..." class="d-block w-100" alt="...">
+                            <div class="col-8 offset-2">
+                                <div class="card">
+                                    <img src="assets/img/user2.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Card title</h5>
+                                        <p class="card-text">This is a longer card with supporting text below as a
+                                            natural lead-in to additional content. This content is a little bit longer.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="..." class="d-block w-100" alt="...">
+                            <div class="col-8 offset-2">
+                                <div class="card">
+                                    <img src="assets/img/user3.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Card title</h5>
+                                        <p class="card-text">This is a longer card with supporting text below as a
+                                            natural lead-in to additional content. This content is a little bit longer.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="col-8 offset-2">
+                                <div class="card">
+                                    <img src="assets/img/user4.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Card title</h5>
+                                        <p class="card-text">This is a longer card with supporting text below as a
+                                            natural lead-in to additional content. This content is a little bit longer.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide"
