--- a/index.html
+++ b/index.html
@@ -378,6 +378,9 @@
     </section>
     <!-- Feedback Section End -->
 
+    <!-- Footer Section Start -->
+    <!-- Footer Section End -->
+
 
     <!-- Bootstrap JS CDN -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
