--- a/index.html
+++ b/index.html
@@ -313,7 +313,8 @@
                                         <h5 class="card-title">David Warner</h5>
                                         <h6 class="card-subtitle  text-body-secondary mb-2">HR Manager</h6>
                                         <p class="card-text">
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates minima, totam asperiores repudiandae autem aliquam.
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates minima,
+                                            totam asperiores repudiandae autem aliquam.
                                         </p>
                                     </div>
                                 </div>
@@ -327,7 +328,8 @@
                                         <h5 class="card-title">Lily Joans</h5>
                                         <h6 class="card-subtitle  text-body-secondary mb-2">Software Engineer</h6>
                                         <p class="card-text">
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates minima, totam asperiores repudiandae autem aliquam.
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates minima,
+                                            totam asperiores repudiandae autem aliquam.
                                         </p>
                                     </div>
                                 </div>
@@ -341,7 +343,8 @@
                                         <h5 class="card-title">Kevin Williams</h5>
                                         <h6 class="card-subtitle  text-body-secondary mb-2">Accounts Manager</h6>
                                         <p class="card-text">
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates minima, totam asperiores repudiandae autem aliquam.
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates minima,
+                                            totam asperiores repudiandae autem aliquam.
                                         </p>
                                     </div>
                                 </div>
@@ -355,7 +358,8 @@
                                         <h5 class="card-title">Phoebe Anderson</h5>
                                         <h6 class="card-subtitle  text-body-secondary mb-2">Graphics Designer</h6>
                                         <p class="card-text">
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates minima, totam asperiores repudiandae autem aliquam.
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates minima,
+                                            totam asperiores repudiandae autem aliquam.
                                         </p>
                                     </div>
                                 </div>
@@ -379,6 +383,14 @@
     <!-- Feedback Section End -->
 
     <!-- Footer Section Start -->
+    <footer id="footer">
+        <div class="footer py-2 text-center fw-semibold">
+            <p class="m-0">
+                All rights reserved.
+                &copy;2024 | Made by <a href="https://github.com/naimur-234964" target="_blank">Naimur Rahman</a>
+            </p>
+        </div>
+    </footer>
     <!-- Footer Section End -->
 
 
